update js assiment 2 solving

--- a/2/index.html
+++ b/2/index.html
@@ -71,37 +71,37 @@
                                 <div class="tab-content" id="pills-tabContent">
                                     <div class="tab-pane fade show active" id="pills-assign1" role="tabpanel"
                                         aria-labelledby="pills-assign1-tab">
-                                        <p class="lead">Write a Program that allow to user enter number then print it.</p>
+                                        <p class="lead">Write a Javascript funcation to cheeck whether an input is an array or not.</p>
                                         <button id="assignment" onclick="assignOne();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign2" role="tabpanel"
                                         aria-labelledby="pills-assign2-tab">
-                                        <p class="lead">Write a program that take number form user then print yesy if that number can divide by 3 and 4 otherwise print no.</p>
+                                        <p class="lead">Write a Javascript funcation to get the current date when click on a button.</p>
                                         <button onclick="assignTwo();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign3" role="tabpanel"
                                         aria-labelledby="pills-assign3-tab">
-                                        <p class="lead">Write a program that allows the user to insert 2 intgers then print the max.</p>
+                                        <p class="lead">Write a Javascript funcation to test whether a date is a weekend ir Not.</p>
                                         <button onclick="assignThree();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign4" role="tabpanel"
                                         aria-labelledby="pills-assign4-tab">
-                                        <p class="lead">Write a program that allows the user to insert an integer then print negative if it is negative number otherwise print positive.</p>
+                                        <p class="lead">Write a Javascript program to get the product price when enter product name.</p>
                                         <button onclick="assignFour();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign5" role="tabpanel"
                                         aria-labelledby="pills-assign5-tab">
-                                        <p class="lead">Write a program that that take 3 inegers from user then print the max element and the min element.</p>
+                                        <p class="lead">Write a Javascript program to get the volum of cylinder(using objects).</p>
                                         <button onclick="assignFive();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign6" role="tabpanel"
                                         aria-labelledby="pills-assign6-tab">
-                                        <p class="lead">Write a program that allows the user to insert integer number then check if a number is even or odd.</p>
+                                        <p class="lead">Dispalying the object in a Loop.</p>
                                         <button onclick="assignSix();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign7" role="tabpanel"
                                         aria-labelledby="pills-assign7-tab">
-                                        <p class="lead">Write a program that take character from user then if it is vowel chars (a,e,i,o,u) then print vowel otherwise print consonant.</p>
+                                        <p class="lead">Write a Javascript program which prints the elements of this following array.</p>
                                         <button onclick="assignSeven();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign8" role="tabpanel"
