finished the second js assiments

--- a/2/index.html
+++ b/2/index.html
@@ -106,22 +106,22 @@
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign8" role="tabpanel"
                                         aria-labelledby="pills-assign8-tab">
-                                        <p class="lead">Write a program that allows user to insert integer then print al number between 1 to that's number.</p>
+                                        <p class="lead">Write a Javascript program to compute th sum of each individual index value from tow array with individual values.</p>
                                         <button onclick="assignEight();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign9" role="tabpanel"
                                         aria-labelledby="pills-assign9-tab">
-                                        <p class="lead">Write a program that allows user to insert integer then print a multiplication table up to 12.</p>
+                                        <p class="lead">Write a Javascript program to compute the union of tow arrays.</p>
                                         <button onclick="assignNine();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign10" role="tabpanel"
                                         aria-labelledby="pills-assign10-tab">
-                                        <p class="lead">Write a program that allows to user to insert number then print all even number between 1 to this number.</p>
+                                        <p class="lead">Write a Javascript program funcation to check that an array is contain a specific element or not.</p>
                                         <button onclick="assignTen();" class="btn btn-dark">Try it!</button>
                                     </div>
                                     <div class="tab-pane fade" id="pills-assign11" role="tabpanel"
                                         aria-labelledby="pills-assign11-tab">
-                                        <p class="lead">Write a program that take two integers then print the power.</p>
+                                        <p class="lead">Write a Javascript funcation to get the last day of month.</p>
                                         <button onclick="assignEleven();" class="btn btn-dark">Try it!</button>
                                     </div>
                                 </div>
